Fix environment variable declaration in main.yml
Updated environment variable syntax in GitHub Actions workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      env:
-          VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
+    env:
+      VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }},
+      VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
