testing redirection fixs for OAuth flows

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,8 @@
 
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Site URL for OAuth redirects
+# Development: http://localhost:5173
+# Production: https://yourusername.github.io/running-potato-key
+VITE_SITE_URL=http://localhost:5173
