--- a/.env.local.example
+++ b/.env.local.example
@@ -5,7 +5,7 @@
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Site URL for OAuth redirects
+# Site URL for OAuth redirects (include full path with base)
 # Development: http://localhost:5173
 # Production: https://yourusername.github.io/running-potato-key
 VITE_SITE_URL=http://localhost:5173
