--- a/.env.local.example
+++ b/.env.local.example
@@ -12,4 +12,5 @@ VITE_SITE_URL=http://localhost:5173
 
 # Google Gemini AI API Key
 # Get your API key from https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+# Note: MUST be prefixed with VITE_ to be accessible in the browser
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
